--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
 }
 
 .flexible-container {
-    padding: 5% 15% 5% 15%;
+    padding: 5% 10% 5% 10%;
     display: flex;
 }
 
@@ -73,9 +73,9 @@ p {
     text-align: right;
 }
 .last h1{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
-    font-size: 20px;
+    font-size: 50px;
     font-weight: bolder;
 }
 
@@ -83,7 +83,7 @@ p {
     font-family: 'Inter', sans-serif;
     justify-content: center;
     text-align: center;
-    font-weight: 900;
+    font-weight: bold;
     width: 25%;
     margin-left: 600px;
 }
@@ -99,7 +99,7 @@ p {
 
 #email{
     background-color: #bbbbbb;
-    border-color: rgba(238, 236, 236, 0.913);
+    border-color: #bbbbbb;
     box-shadow: none;
     padding: 12px;
     margin-right: -5px;
@@ -111,6 +111,35 @@ p {
     text-decoration: none;
     background-color: rgb(251, 69, 69);
     font-weight: bold;
-    padding: 10px 40px 12px 40px;
+    padding: 10px 40px 13px 40px;
     color: white;
+}
+
+#left{
+    width: 5%;
+    background-color: rgb(79, 157, 166, 0.1);
+    padding: 100px 200px 400px 200px;
+    margin-left: 45px;
+    margin-top: 20px;
+}
+
+#middle{
+    width: 5%;
+    margin-left: 555px;
+    margin-top: -580px;
+    background-color: rgb(255, 89, 89, 0.1);
+    padding: 100px 200px 400px 200px;
+}
+
+#right{
+    width: 5%;
+    margin-left: 1065px;
+    margin-top: -580px;
+    background-color: rgb(255, 244, 214, 1);
+    padding: 100px 200px 400px 200px;
+}
+
+.divide img{
+    width: 75px;
+    height: 75px;
 }
