--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0%;
 }
 
-h1{
+.flexible-container h1{
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     line-height: 20px;
@@ -118,7 +118,7 @@ p {
 #left{
     width: 5%;
     background-color: rgb(79, 157, 166, 0.1);
-    padding: 100px 200px 400px 200px;
+    padding: 100px 200px 100px 200px;
     margin-left: 45px;
     margin-top: 20px;
 }
@@ -126,20 +126,31 @@ p {
 #middle{
     width: 5%;
     margin-left: 555px;
-    margin-top: -580px;
+    margin-top: -450px;
     background-color: rgb(255, 89, 89, 0.1);
-    padding: 100px 200px 400px 200px;
+    padding: 100px 200px 100px 200px;
 }
 
 #right{
     width: 5%;
     margin-left: 1065px;
-    margin-top: -580px;
+    margin-top: -450px;
     background-color: rgb(255, 244, 214, 1);
-    padding: 100px 200px 400px 200px;
+    padding: 100px 200px 100px 200px;
 }
 
 .divide img{
     width: 75px;
     height: 75px;
+    margin-left: -150px;
+}
+
+.left{
+    margin-left: -150px;
+}
+
+.left h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
 }
