--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .flexible-container {
-    padding: 5% 10% 5% 10%;
+    padding: 5% 15% 5% 15%;
     display: flex;
 }
 
@@ -61,6 +61,7 @@ footer {
 
 p {
     font-family: 'Poppins', sans-serif;
+    color: #5b5b5b;
 }
 .second-row {
     top: 50%;
@@ -89,7 +90,7 @@ p {
 }
 
 .validation{
-    background-color: rgb(246, 235, 173);
+    background-color: rgb(251, 243, 198);
     justify-content: center;
     padding: 100px 200px 100px 200px;
     display: flex;
@@ -120,7 +121,6 @@ p {
     background-color: rgb(79, 157, 166, 0.1);
     padding: 100px 200px 100px 200px;
     margin-left: 45px;
-    margin-top: 20px;
 }
 
 #middle{
@@ -153,4 +153,94 @@ p {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     font-weight: bold;
+}
+
+.donate{
+    text-align: center;
+    line-height: 15px;
+}
+
+.donate h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+}
+
+#first {
+    width: 15%;
+    background-color: rgb(225, 225, 225);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    margin-left: 75px;
+    margin-top: 200px;
+}
+
+#second {
+    width: 15%;
+    background-color: rgb(253, 221, 221);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    margin-left: 360px;
+    margin-top: -160px;
+    color: rgb(250, 128, 128);
+}
+
+#third {
+    width: 15%;
+    background-color: rgb(225, 225, 225);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    margin-left: 660px;
+    margin-top: -160px;
+}
+
+#fourth {
+    width: 15%;
+    background-color: rgb(225, 225, 225);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    margin-left: 960px;
+    margin-top: -165px;
+}
+
+#fifth {
+    width: 15%;
+    background-color: rgb(225, 225, 225);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    margin-left: 1255px;
+    margin-top: -165px;
+}
+
+.right{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+}
+.align-center{
+    margin-left: 720px;
+}
+.aligned-center{
+    margin-top: 50px;
+    margin-left: 688px;
+    margin-bottom: 20px;
+}
+
+#input {
+    text-align: center;
+    border-color: #bbbbbb;
+    box-shadow: none;
+    padding: 12px;
+    margin-right: -5px;
+    color: #5b5b5b;
+}
+.divided{
+    margin-top: -150px;
+}
+.initial{
+    text-align: center;
+    background: url(images/hero.png), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: -20px;
+    max-height: fit-content;
 }
