--- a/style.css
+++ b/style.css
@@ -238,9 +238,24 @@ p {
 }
 .initial{
     text-align: center;
-    background: url(images/hero.png), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+    background: url(images/hero.png), linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0));
     background-size: cover;
+    height: 60vh;
     background-repeat: no-repeat;
     margin-top: -20px;
-    max-height: fit-content;
+    padding-top: 200px;
+    color: white;
+    margin-bottom: 200px;
+}
+
+.initial p{
+    color: white;
+    width: 35%;
+    margin-left: 510px;
+    margin-bottom: 35px;
+}
+
+.initial h1{
+    font-size: 50px;
+    line-height: 20px;
 }
